# biter_survivors

./: Cargo.toml  README.md
src/: main.rs
src/states/: mod.rs  simulation.rs
