[package]
name = "biter_survivors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.2"
bevy_ecs_tilemap = { version = "0.11.0", features = ["atlas"] }
bevy_tileset = { version = "0.8.0", features = ["auto-tile", "variants"] }

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable high optimizations for release builds:
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.dev-stable]
inherits = "dev"
